 */
 
CHANGELOG (see the SVN commit log for more detail)
-------------------------------------------------------------------------------

Version 2.0.1
-----------
- Made multiple info windows an option, not the default, for Google v3 and OpenLayers
- Added TimeMapItem#getInfoHtml and TimeMapItem#onVisibleTimeline
- Refactored TimeMap selection functions (setSelected, getSelected)
- Updated to newest jQuery and Mapstraction
- Added tests for info windows
- Fixed a number of small bugs

Version 2.0
-----------
- Removed dependency on Google Maps v2
- Added dependencies on jQuery and Mapstraction
- Refactored code to take advantage of jQuery
- Added customized fork of Mapstraction library
- Added support and tests for Google v2, Google v3, OpenLayers, and Bing Maps
- Added ant build script

Version 1.6
-----------
- Added progressive loader to easily load large datasets a little bit at a
time, based on timeline location.
- More changes to the loader architecture, allowing asynchronous loads to be 
cancelled, a default loader to be used, and even easier creation of new loaders
- Support for getting timemap state from the URL hash
- Support for loading extra data from arbitrary Google Spreadsheet columns
- Support for ExtendedData in KML
- Support for loading arbitrary tags in XML (KML, GeoRSS)
- Templating support for info window data
- Timestamp support in TimeMapDataset.hybridParser
- Additions and tweaks to documentation, including new template
- Some tweaks for improved performance

Version 1.5
-----------
- Fairly substantial changes to the loader architecture - should make everything a
little cleaner, and allows implementation of service-specific loaders (e.g.
Flickr, etc). IMPORTANT: Loader files have moved to the loaders/ directory.
- Some changes to TimeMap.init() syntax - the only things not backwards-compatible
are the preloadFunction and transformFunction params, which should now go in an
options object within the dataset object.